--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             column-gap: 3%;
             width: 80vw;
             height: 70vh;
-            border: solid 1px lightgray;
+/*             border: solid 1px lightgray; */
             border-radius: 10px;
         }
 
