--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             width: 80vw;
             height: 70vh;
 /*             border: solid 1px lightgray; */
-            border-radius: 10px;
+/*             border-radius: 10px; */
         }
 
         .d3-tip {
