--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
             </ul>
         </div>
 
-        <!-- 内容 -->
+        <!-- content -->
         <section id="content">
             <div id="chart">
 
